# morphir-rust

./: .clippy.toml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.spdx  NOTICE  README.md  mise.toml  renovate.json  rustfmt.toml
.beads/: issues.jsonl
.github/: CODE_OF_CONDUCT.md
completions/: _morphir  morphir.bash  morphir.fish
crates/integration-tests/: Cargo.toml
crates/integration-tests/fixtures/ir/v4/: v4-library-distribution.json
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: cli.rs
crates/integration-tests/tests/features/: cli.feature  steel-thread.feature
crates/morphir/: Cargo.toml  build.rs
crates/morphir-builtins/: Cargo.toml  README.md
crates/morphir-builtins/src/: lib.rs  registry.rs
crates/morphir-builtins/src/migrate/: mod.rs  wasm.rs
crates/morphir-common/: Cargo.toml
crates/morphir-common/src/: codegen.rs  lib.rs  loader.rs  pipeline.rs  vfs.rs
crates/morphir-common/src/config/: legacy.rs  mod.rs  model.rs
crates/morphir-common/src/pipeline/: decorators.rs  ir.rs
crates/morphir-common/src/remote/: cache.rs  config.rs  error.rs  git.rs  http.rs  mod.rs  resolver.rs  source.rs
crates/morphir-common/src/vfs/: memory.rs  mod.rs  notebook.rs  os.rs
crates/morphir-core/: Cargo.toml
crates/morphir-core/src/: converter.rs  ir.rs  lib.rs
crates/morphir-core/src/ir/: attributes.rs  classic.rs  serde_tagged.rs  serde_v4.rs  type_def.rs  type_expr.rs  v4.rs  value_expr.rs
crates/morphir-core/src/ir/classic/: access.rs  attributes.rs  distribution.rs  documented.rs  literal.rs  mod.rs  module.rs  naming.rs  package.rs  pattern.rs  types.rs  value.rs
crates/morphir-core/src/ir/v4/: access.rs  attributes.rs  distribution.rs  literal.rs  mod.rs  module.rs  package.rs  pattern.rs  serde_tagged.rs  serde_v4.rs  type_def.rs  types.rs  value.rs
crates/morphir-core/src/naming/: interner.rs  mod.rs  module_name.rs
crates/morphir-core/src/traversal/: visitor.rs  walker.rs
crates/morphir-core/tests/: bisect_error.rs  classic_distribution_test.rs  classic_ir_loading.rs  classic_literals.rs  classic_modules_test.rs  classic_name_parsing.rs  classic_naming.rs  classic_simpler_loading.rs  classic_specs_test.rs  classic_types_test.rs  classic_values_test.rs  debug_modules.rs  v4_distribution.rs  v4_hole_reason.rs  v4_incompleteness.rs  v4_literal.rs  v4_native_hint.rs
crates/morphir-daemon/: Cargo.toml
crates/morphir-daemon/src/: config.rs  error.rs  lib.rs  workspace.rs
crates/morphir-daemon/src/extensions/: container.rs  host_functions.rs  loader.rs  mod.rs  protocol.rs  registry.rs  virtual_paths.rs
crates/morphir-design/: Cargo.toml
crates/morphir-design/src/: config.rs  extensions.rs  lib.rs
crates/morphir-ext/: Cargo.toml
crates/morphir-ext-core/: Cargo.toml
crates/morphir-ext-core/src/: abi.rs  envelope.rs  lib.rs
crates/morphir-ext-core/wit/: envelope.wit  program.wit  runtime.wit
crates/morphir-ext-example/: Cargo.toml  README.md
crates/morphir-ext-example/.cargo/: config.toml
crates/morphir-ext-example/src/: lib.rs
crates/morphir-ext/src/: actor.rs  lib.rs  runtime.rs
crates/morphir-ext/tests/: extension_test.rs
crates/morphir-extension-sdk/: Cargo.toml
crates/morphir-extension-sdk/src/: error.rs  host.rs  lib.rs  prelude.rs  protocol.rs  traits.rs  types.rs
crates/morphir-gleam-binding/: Cargo.toml
crates/morphir-gleam-binding/src/: lib.rs  roundtrip.rs
crates/morphir-gleam-binding/src/backend/: codegen.rs  mod.rs  pretty_printer.rs  visitor.rs
crates/morphir-gleam-binding/src/frontend/: ast.rs  compare.rs  errors.rs  lexer.rs  mod.rs  parser.rs  visitor.rs
crates/morphir-gleam-binding/tests/: acceptance.rs  cli_helpers.rs  coverage.rs
crates/morphir-gleam-binding/tests/features/: cli.feature  codegen.feature  feature_registry.yaml  parsing.feature  project.feature  roundtrip.feature  workspace.feature
crates/morphir-gleam-binding/tests/fixtures/real_world/: README.md  buy_response.gleam  client.gleam  deal.gleam  order_price.gleam  order_processing.gleam  order_validation.gleam  price.gleam  product.gleam  quantity.gleam  rate.gleam  reject_reason.gleam  rentals.gleam  violations.gleam
crates/morphir-gleam-binding/tests/fixtures/single_file/: with_types.gleam
crates/morphir-ir/: Cargo.toml
crates/morphir-ir/src/: converter.rs  error.rs  ir.rs  lib.rs  visitor.rs
crates/morphir-ir/src/ir/: attributes.rs  classic.rs  literal.rs  pattern.rs  serde_tagged.rs  serde_v4.rs  type_def.rs  type_expr.rs  v4.rs  value_expr.rs
crates/morphir-ir/src/naming/: fqname.rs  mod.rs  module_name.rs  name.rs  package_name.rs  path.rs  qname.rs
crates/morphir-ir/src/traversal/: cursor.rs  mod.rs  transform.rs  visitor.rs  walker.rs
crates/morphir-models/: Cargo.toml
crates/morphir-models/src/: error.rs  ir.rs  lib.rs
crates/morphir-tests/: Cargo.toml  output_test.json
crates/morphir-tests/fixtures/classic/: evaluator-tests.json
crates/morphir-tests/tests/: acceptance.rs
crates/morphir-tests/tests/features/: configuration.feature  document_tree.feature  ir_v1.json  ir_v2.json  ir_v3.json  legacy_loading.feature  migration.feature  morphir_elm_v3.json  real_v3.json  simple_classic.json  simple_v4.json  vfs.feature  visitor.feature
crates/morphir-wasm-binding/: Cargo.toml
crates/morphir-wasm-binding/src/: lib.rs
crates/morphir-wasm-binding/src/backend/: codegen.rs  mod.rs  wat.rs
crates/morphir-wit-extension/: Cargo.toml
crates/morphir-wit-extension/src/: error.rs  lib.rs  runtime.rs  types.rs
crates/morphir/src/: error.rs  help.rs  lib.rs  logging.rs  main.rs  output.rs
crates/morphir/src/commands/: compile.rs  dist.rs  extension.rs  generate.rs  gleam.rs  migrate.rs  mod.rs  schema.rs  tool.rs
crates/morphir/src/tui/: pager.rs
crates/morphir/tests/: cli_integration.rs
docs/: Gemfile  _config.yml  getting-started.md  index.md  install.md  ir-migrate.md  llms-full.txt  (+4 more)
morphir/: Cargo.toml
morphir/src/: main.rs
morphir/src/commands/: dist.rs  extension.rs  mod.rs  tool.rs  transform.rs  validate.rs
(+134 files in other folders)
