[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FINOS <info@finos.org>"]
license = "Apache-2.0"
repository = "https://github.com/finos/morphir-rust"
homepage = "https://github.com/finos/morphir-rust"
documentation = "https://docs.rs/morphir-rust"
keywords = ["morphir", "functional", "domain-modeling", "ir"]
categories = ["development-tools", "parsers"]

[workspace.dependencies]
# CLI framework
starbase = "0.10.8"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"
tuirealm = "2"
tui-realm-stdlib = "3"
tui-realm-textarea = "2"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Functional programming utilities
# Add more as needed

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

