[package]
name = "morphir-builtins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Builtin extensions bundled with Morphir (native Rust + WASM)"

[lib]
crate-type = ["rlib", "cdylib"]  # Both library and WASM

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal crates
morphir-ext-core = { path = "../morphir-ext-core" }
morphir-core = { path = "../morphir-core" }
morphir-common = { path = "../morphir-common" }

# For indexmap in migrate
indexmap = "2"

[features]
default = ["all-builtins"]

# Individual builtins
all-builtins = ["migrate"]
migrate = []

# WASM bundling (embed compiled WASM in binary)
wasm = []

[dev-dependencies]
tempfile = "3"
