[package]
name = "morphir-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dirs = "6.0"
morphir-ir = { path = "../morphir-ir" }
glob = "0.3"
indexmap = { version = "2", features = ["serde"] }

# Remote source support
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
flate2 = "1.0"
zip = "2.1"
tar = "0.4"
tempfile = "3.24"

[dev-dependencies]
tempfile = "3.24.0"
