[package]
name = "morphir-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Morphir core model definitions and utilities"

[lib]
name = "morphir_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.9", features = ["derive", "indexmap2"] }
indexmap = { version = "2", features = ["serde"] }
lasso = { version = "0.7", features = ["multi-threaded", "serde"] }

[dev-dependencies]
rstest = "0.26"
