[package]
name = "morphir-design"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
morphir-common = { path = "../morphir-common" }
anyhow = { workspace = true }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"