[package]
name = "morphir-ext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
morphir-ext-core = { path = "../morphir-ext-core" }
kameo = "0.19"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
