[package]
name = "morphir-extension-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "SDK for building Morphir extensions as WASM plugins"

[lib]
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies
thiserror = { workspace = true }

# Plugin development kit (for WASM guests)
extism-pdk = "1.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
# Enable host-side types (for morphir-daemon)
host = []
