[package]
name = "morphir-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Morphir IR model definitions and utilities"

[lib]
name = "morphir_ir"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive", "indexmap2"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
rstest = "0.26"

