[package]
name = "morphir-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cucumber = { version = "0.22", features = ["output-json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = { workspace = true }
serde_json = "1.0"
morphir-ir = { path = "../morphir-ir" }
morphir-common = { path = "../morphir-common" }

[[test]]
name = "acceptance"
harness = false

[dev-dependencies]
tempfile = "3.24.0"
