[package]
name = "morphir-wit-extension"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "WASM Component Model runtime and WIT interface support for Morphir extensions"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }

# WASM runtime
wasmtime = "28"
wasmtime-wasi = "28"

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Internal crates
morphir-models = { path = "../morphir-models" }
