[package]
name = "morphir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Morphir CLI tool for Rust"

[[bin]]
name = "morphir"
path = "src/main.rs"

[dependencies]
starbase = { workspace = true }
clap = { workspace = true, features = ["color"] }
owo-colors = "4"
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
morphir-ir = { path = "../morphir-ir" }
morphir-common = { path = "../morphir-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
schemars = "0.9"
indexmap = { version = "2", features = ["serde"] }
usage-lib = { version = "2", features = ["clap", "docs"] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

