[package]
name = "morphir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for working with Morphir IR - functional domain modeling and business logic"

[lib]
name = "morphir"
path = "src/lib.rs"

[[bin]]
name = "morphir"
path = "src/main.rs"

[dependencies]
starbase = { workspace = true }
clap = { workspace = true, features = ["color"] }
owo-colors = "4"
termimad = "0.30"
syntect = "5"
anyhow = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
morphir-ir = { path = "../morphir-ir" }
morphir-common = { path = "../morphir-common" }
morphir-design = { path = "../morphir-design" }
morphir-daemon = { path = "../morphir-daemon" }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
schemars = "0.9"
indexmap = { version = "2", features = ["serde"] }
usage-lib = { version = "2", features = ["clap", "docs"] }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }
tuirealm = { workspace = true }
tui-realm-stdlib = { workspace = true }
tui-realm-textarea = { workspace = true }

# Structured logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[build-dependencies]
chrono = "0.4"

[[test]]
name = "cli_integration"
path = "tests/cli_integration.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

